Add /v1 prefix to routes
